@@ -142,6 +142,10 @@
 [249/2401, 1644/2401]~
 [-7, -14]~
 [14, 0]~
+[9223372036854775807, 0]
+[2, [0, -4]~]
+[3, [8/125, 0]~]
+[4, [0, 1]~]
   *** nfinit: Warning: non-monic polynomial. Result of the form [nf,c].
 [[2, [0, 1]~, 2, 1, [0, -2; 1, 0]]]
-Total time spent: 8
+Total time spent: 4
