@@ -7,10 +7,13 @@ Done for version 2.8.0 (released ??/??/2014):
     1- make install fails on OS/X: ln -s libpari.dylib libpari.dylib fails
     2- Q_pvalrem(t_FRAC) => wrong result
 
+
   Added
     1- add optional argument to sumdigits to specify the base
     2- [libpari] bits_to_int,bits_to_u,binary_zv,binary_2k,binary_2k_zv
     3- [GP] support for variadic GP functions (f(v[..])=expr)
+    4- nfeltval(K, x, pr, &y) now takes an optional 4th argument, containing
+       the part of x coprime to pr.
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
